--- a/tintuc-sukien/danhmuc/Tin Tức Sự Kiện - Slide KHOA GIÁO.html
+++ b/tintuc-sukien/danhmuc/Tin Tức Sự Kiện - Slide KHOA GIÁO.html
@@ -50,15 +50,10 @@
             <!-- Thêm nút điều hướng tùy chỉnh -->
             <button class="custom-prev-btn" id="khoagiao-prev-btn">
 
-                <img src="/documents/39403/310714/left-arrow.svg"
-                     alt="Previous"
-                />
+                <i class="icon-prev-ttsk fa fa-chevron-left" ></i>
             </button>
             <button class="custom-next-btn" id="khoagiao-next-btn">
-                <img
-                        src="/documents/39403/310714/right-arrow.svg"
-                        alt="Next"
-                />
+                <i class="icon-prev-ttsk fa fa-chevron-right" ></i>
             </button>
 
             <!-- Định nghĩa mapping cho icons -->
@@ -107,7 +102,8 @@
                             article = renderer.getArticle()
                             description = article.getDescription(locale)
                             ddmTemplateKey = article.getDDMTemplateKey()
-                            createTime = dateUtil.getDate(curEntry.getCreateDate(), dateFormatTime, locale)
+                        displayDate = article.getDisplayDate()?datetime
+                        createTime = dateUtil.getDate(displayDate, dateFormatTime, locale)
                             createDay = dateUtil.getDate(curEntry.getCreateDate(), dateFormatDay, locale)
                             createMonth = dateUtil.getDate(curEntry.getCreateDate(), monthFormatDay, locale)
                             createYear = dateUtil.getDate(curEntry.getCreateDate(), yearFormatDay, locale)
@@ -118,7 +114,7 @@
                             <#if curEntry.getAssetRenderer().getThumbnailPath(renderRequest)??>
                                 <#assign smallImageUrl = curEntry.getAssetRenderer().getThumbnailPath(renderRequest) >
                             <#else>
-                                <#assign smallImageUrl = "" >
+                                <#assign smallImageUrl = "/documents/20123/41696/cover-emty-img.jpg" />
                             </#if>
                             <swiper-slide
                             ><div class="card position-relative mb-5">
