--- a/CongDan/GiaoDuc.html
+++ b/CongDan/GiaoDuc.html
@@ -65,7 +65,7 @@
             <#if curEntry.getAssetRenderer().getThumbnailPath(renderRequest)??>
                 <#assign smallImageUrl = curEntry.getAssetRenderer().getThumbnailPath(renderRequest) >
             <#else>
-                <#assign smallImageUrl = "" >
+                <#assign smallImageUrl = "/documents/20123/41696/cover-emty-img.jpg" />
             </#if>
             <div class="wrap-item-content">
                 <div class="row" onclick="location.href='${viewURL}'">
