--- a/HoatDong/hd_khac.html
+++ b/HoatDong/hd_khac.html
@@ -189,7 +189,7 @@
                     <#if curEntry.getAssetRenderer().getThumbnailPath(renderRequest)??>
                         <#assign smallImageUrl = curEntry.getAssetRenderer().getThumbnailPath(renderRequest) >
                     <#else>
-                        <#assign smallImageUrl = "" >
+                        <#assign smallImageUrl = "/documents/20123/41696/cover-emty-img.jpg" />
                     </#if>
                     <div class="img-hover mg-b-24">
                     <a href="${viewURL}" class="d-flex w-100 same-height img-hover">
@@ -304,7 +304,7 @@
                             <#if curEntry.getAssetRenderer().getThumbnailPath(renderRequest)??>
                                 <#assign smallImageUrl = curEntry.getAssetRenderer().getThumbnailPath(renderRequest) >
                             <#else>
-                                <#assign smallImageUrl = "" >
+                                <#assign smallImageUrl = "/documents/20123/41696/cover-emty-img.jpg" />
                             </#if>
                             <div class="media mb-4 col-12" onclick="location.href='${viewURL}'" style="cursor: pointer;">
                                 <img <#if curEntry_index == 0>id="img-activity-bottom"</#if> class="img-activity-bottom mr-3" src="${smallImageUrl}" alt="fls1.jpg">
