--- a/Không Gian Văn Hoá/DanhSachTinTucVanHoa.html
+++ b/Không Gian Văn Hoá/DanhSachTinTucVanHoa.html
@@ -242,7 +242,7 @@
                     <#if curEntry.getAssetRenderer().getThumbnailPath(renderRequest)??>
                         <#assign smallImageUrl = curEntry.getAssetRenderer().getThumbnailPath(renderRequest) >
                     <#else>
-                        <#assign smallImageUrl = "" >
+                        <#assign smallImageUrl = "/documents/20123/41696/cover-emty-img.jpg" />
                     </#if>
                     <div class="media mb-4" onclick="location.href='${viewURL}'" style="cursor: pointer;">
                         <div class="row media-news media-news-hover">
