--- a/PhanVanMai/ChuyenTrangPVMHeaderBanner.html
+++ b/PhanVanMai/ChuyenTrangPVMHeaderBanner.html
@@ -287,7 +287,7 @@
                                     <#if curEntry.getAssetRenderer().getThumbnailPath(renderRequest)??>
                                         <#assign smallImageUrl = curEntry.getAssetRenderer().getThumbnailPath(renderRequest) >
                                     <#else>
-                                        <#assign smallImageUrl = "" >
+                                        <#assign smallImageUrl = "/documents/20123/41696/cover-emty-img.jpg" />
                                     </#if>
                                     <div class="activity-item-pct">
                                         <img
@@ -345,7 +345,7 @@
                                     <#if curEntry.getAssetRenderer().getThumbnailPath(renderRequest)??>
                                         <#assign smallImageUrl = curEntry.getAssetRenderer().getThumbnailPath(renderRequest) >
                                     <#else>
-                                        <#assign smallImageUrl = "" >
+                                        <#assign smallImageUrl = "/documents/20123/41696/cover-emty-img.jpg" />
                                     </#if>
                                     <div class="activity-item-pct">
                                         <img
