--- a/Phó chủ tịch/Dương Ngọc Hải/Giới thiệu lãnh đạo.html
+++ b/Phó chủ tịch/Dương Ngọc Hải/Giới thiệu lãnh đạo.html
@@ -569,7 +569,7 @@
                         <#if curEntry.getAssetRenderer().getThumbnailPath(renderRequest)??>
                             <#assign smallImageUrl = curEntry.getAssetRenderer().getThumbnailPath(renderRequest) >
                         <#else>
-                            <#assign smallImageUrl = "" >
+                            <#assign smallImageUrl = "/documents/20123/41696/cover-emty-img.jpg" />
                         </#if>
 
                         <div class="activity-item-pct-hd">
