--- a/pct_thuy/pct_thuy_cd.html
+++ b/pct_thuy/pct_thuy_cd.html
@@ -349,7 +349,7 @@
                     <#if curEntry.getAssetRenderer().getThumbnailPath(renderRequest)??>
                         <#assign smallImageUrl = curEntry.getAssetRenderer().getThumbnailPath(renderRequest) >
                     <#else>
-                        <#assign smallImageUrl = "" >
+                        <#assign smallImageUrl = "/documents/20123/41696/cover-emty-img.jpg" />
                     </#if>
 
                     <li class="news-item-pct-cd">
