--- a/tintuc-sukien/Tin Tức Sự Kiện - Sở Ngành.html
+++ b/tintuc-sukien/Tin Tức Sự Kiện - Sở Ngành.html
@@ -444,7 +444,7 @@
 						<#if curEntry.getAssetRenderer().getThumbnailPath(renderRequest)??>
 							<#assign smallImageUrl = curEntry.getAssetRenderer().getThumbnailPath(renderRequest) >
 						<#else>
-							<#assign smallImageUrl = "" >
+							<#assign smallImageUrl = "/documents/20123/41696/cover-emty-img.jpg" />
 						</#if>
 						<div class="news-item">
 							<i class="fa fa-newspaper-o me-3"></i>
