--- a/tintuc-sukien/danhmuc/Tin Tức Sự Kiện - Slide HOẠT ĐỘNG CỦA LÃNH ĐẠO TP.html
+++ b/tintuc-sukien/danhmuc/Tin Tức Sự Kiện - Slide HOẠT ĐỘNG CỦA LÃNH ĐẠO TP.html
@@ -50,15 +50,10 @@
             <!-- Thêm nút điều hướng tùy chỉnh -->
             <button class="custom-prev-btn" id="hdld-prev-btn">
 
-                <img src="/documents/39403/310714/left-arrow.svg"
-                     alt="Previous"
-                />
+                <i class="icon-prev-ttsk fa fa-chevron-left" ></i>
             </button>
             <button class="custom-next-btn" id="hdld-next-btn">
-                <img
-                        src="/documents/39403/310714/right-arrow.svg"
-                        alt="Next"
-                />
+                <i class="icon-next-ttsk fa fa-chevron-right" ></i>
             </button>
 
             <!-- Định nghĩa mapping cho icons -->
@@ -107,7 +102,8 @@
                             article = renderer.getArticle()
                             description = article.getDescription(locale)
                             ddmTemplateKey = article.getDDMTemplateKey()
-                            createTime = dateUtil.getDate(curEntry.getCreateDate(), dateFormatTime, locale)
+                        displayDate = article.getDisplayDate()?datetime
+                        createTime = dateUtil.getDate(displayDate, dateFormatTime, locale)
                             createDay = dateUtil.getDate(curEntry.getCreateDate(), dateFormatDay, locale)
                             createMonth = dateUtil.getDate(curEntry.getCreateDate(), monthFormatDay, locale)
                             createYear = dateUtil.getDate(curEntry.getCreateDate(), yearFormatDay, locale)
