--- a/tintuc-sukien/thongbao-lienket/tb.lk.html
+++ b/tintuc-sukien/thongbao-lienket/tb.lk.html
@@ -178,7 +178,7 @@
                         <#if curEntry.getAssetRenderer().getThumbnailPath(renderRequest)??>
                             <#assign smallImageUrl = curEntry.getAssetRenderer().getThumbnailPath(renderRequest) >
                         <#else>
-                            <#assign smallImageUrl = "" >
+                            <#assign smallImageUrl = "/documents/20123/41696/cover-emty-img.jpg" />
                         </#if>
 
                         <div class="notification-item px-3 py-2">
